@@ -114,19 +114,19 @@
 		<java.version>1.6</java.version>
 
 		<!-- Compilation dependencies, build.gradle -->
-		<android-sdk.version>18</android-sdk.version>
-		<android-buildtools.version>18.1.1</android-buildtools.version>
+		<android-sdk.version>19</android-sdk.version>
+		<android-buildtools.version>19.0.3</android-buildtools.version>
 		<android.version>4.1.1.4</android.version>
 		<android-support.version>r7</android-support.version>
 
 		<!-- AndroidManifest -->
 		<android-min-sdk.version>7</android-min-sdk.version>
-		<android-target-sdk.version>18</android-target-sdk.version>
+		<android-target-sdk.version>19</android-target-sdk.version>
 
 		<!-- compiler dependencies -->
-		<ormlite.version>4.47</ormlite.version>
-		<javawriter.version>2.2.1</javawriter.version>
-		<spring-core.version>3.2.5.RELEASE</spring-core.version>
+		<ormlite.version>4.48</ormlite.version>
+		<javawriter.version>2.4.0</javawriter.version>
+		<spring-core.version>4.0.2.RELEASE</spring-core.version>
 
 		<!-- test dependencies -->
 		<junit.version>4.11</junit.version>
@@ -139,7 +139,7 @@
 		<maven-deploy-plugin.version>2.7</maven-deploy-plugin.version>
 		<maven-release-plugin.version>2.4.1</maven-release-plugin.version>
 
-		<android-maven-plugin.version>3.8.1</android-maven-plugin.version>
+		<android-maven-plugin.version>3.9.0-rc.1</android-maven-plugin.version>
 		<maven-compiler-plugin.version>3.1</maven-compiler-plugin.version>
 		<maven-processor-plugin.version>2.2.4</maven-processor-plugin.version>
 		<maven-antrun-plugin.version>1.7</maven-antrun-plugin.version>
@@ -277,6 +277,7 @@
 					<artifactId>maven-compiler-plugin</artifactId>
 					<version>${maven-compiler-plugin.version}</version>
 					<configuration>
+						<fork>true</fork>
 						<source>${java.version}</source>
 						<target>${java.version}</target>
 						<showWarnings>true</showWarnings>
@@ -306,6 +307,12 @@
 							<platform>${android-sdk.version}</platform>
 						</sdk>
 						<undeployBeforeDeploy>false</undeployBeforeDeploy>
+						<dex>
+							<jvmArguments>
+								<jvmArgument>-Xmx1024m</jvmArgument>
+								<jvmArgument>-XX:MaxPermSize=256m</jvmArgument>
+							</jvmArguments>
+						</dex>
 					</configuration>
 					<extensions>true</extensions>
 				</plugin>
